# tabularcompare

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
data/: df2.csv
src/tabularcompare/: __init__.py  app.py  compare.py  core.py  utils.py
src/tests/data/: df1.csv  df2.csv
tests/: test_app.py  test_compare.py
