[build-system]
requires = [
    "setuptools>=61.0",
    "numpy==1.24.1",
    "pandas==1.5.2",
    "click==8.1.3",
    "datacompy==0.8.4",
    "ipykernel==6.21.1",
    "xlwt==1.3.0",
    "openpyxl==3.1.0",
    "pretty-html-table==0.9.16"
]
build-backend = "setuptools.build_meta"
[project]
name = "tabularcompare"
version = "0.0.1"
authors = [
  { name="Erich Henrique", email="erich.hs13@gmail.com" },
]
description = "Tabular data comparison tool"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/erich-hs/tabular-compare"
"Bug Tracker" = "https://github.com/erich-hs/tabular-compare/issues"