[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tabularcompare"
version = "0.0.2"
authors = [
  { name="Erich Henrique", email="erich.hs13@gmail.com" },
]
description = "Tabular data comparison wrapper for DataComPy"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Tabular", "Compare", "Data"]
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy<=1.24.2,>=1.11.3",
    "pandas<=1.5.3,>=0.25.0",
    "datacompy<=0.9.0,>=0.8.4",
    "pretty-html-table==0.9.16",
    "click",
    "xlwt",
    "openpyxl",    
]
# dynamic = ["version", "readme"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]
qa = ["pylint", "black"]
build = ["build", "twine", "wheel"]
dev = [
  "pytest",
  "pytest-cov",
  "pylint",
  "black",
  "build",
  "twine",
  "wheel"
]

[project.scripts]
tabularcompare = "tabularcompare.app:cli"

[project.urls]
"Homepage" = "https://github.com/erich-hs/tabularcompare"
"Bug Tracker" = "https://github.com/erich-hs/tabularcompare/issues"