[metadata]
name = tabularcompare
version = attr:datacompy.__version__
description = Tabular data comparison wrapper for DataComPy
long_description = file: README.md
long_description_content_type = text/markdown
author = Erich Henrique
author_email = erich.hs13@gmail.com
license = Apache Software License
maintainer = Erich Henrique
maintener_email = erich.hs13@gmail.com
url = https://github.com/erich-hs/tabularcompare
python_requires =
    >= 3.8.0
project_urls =
    Homepage = https://github.com/erich-hs/tabularcompare
    Bug Tracker = https://github.com/erich-hs/tabular-compare/issues
classifiers =
	Intended Audience :: Developers
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires = 
	pandas<=1.5.3,>=0.25.0
	numpy<=1.24.2,>=1.11.3
	ordered-set<=4.1.0,>=4.0.2
    datacompy<=0.9.0,>=0.8.4
    xlwt==1.3.0
    openpyxl==3.1.0
    pretty-html-table==0.9.16

[options.packages.find]
where = src

[options.extras_require]
tests = 
	pytest
	pytest-cov
	pytest-spark
qa = 
	pylint
	black
build = 
	build
	twine
	wheel
dev = 
	pytest
	pytest-cov
	black
	build
	twine
	wheel